fixed width of the footer and spacing around images on main page

--- a/assets/css/shared.scss
+++ b/assets/css/shared.scss
@@ -17,6 +17,10 @@
 	ul.nav-bar {
 		margin-top: 0;
 	}
+	.col-12, .col-sm-6 {
+		margin-top: 20px !important;
+		margin-bottom: 40px !important;
+	}
 }
 // Medium screen size and up
 @media (min-width: 768px) { 
@@ -40,9 +44,12 @@
 }
 html {
   font-size: 100%;
+  position: relative;
+  // min-height: 100%;
 }
 body {
 	margin-top: 30px !important;
+	margin-bottom: 200px !important;
 	background-image: url("../imgs/background.jpg");
 	background-repeat: repeat;
 }
@@ -157,17 +164,21 @@ h3 {
 .main_header {
 	padding: 20px 0 30px 0;
 }
-footer {
-  background-color: #000; 
-  padding-left: -15px !important;
-  padding-right: -15px !important;
+.footer {
+  position: absolute;
+  bottom: 0;
+  margin: 0;
+  min-width: 490px !important;
   width: 100%;
-  height: 180px;}
+  height: 180px; /* Set the fixed height of the footer here */
+  line-height: 60px; /* Vertically center the text there */
+  background-color: black;
+}
 
 footer p {
   color: white;
-  box-sizing: border-box;
-  font-size: 1.1vw;
+  // box-sizing: border-box;
+  font-size: 14px;
   padding: 10px 0 0 30px;}
 .wrapper {
 	background-image: url("../imgs/old_paper_small_red.png");
